Simple OPT record handling
Also adds types to the sections.
Adds dns-bypass prefix command, similar to dns-echo command.